--- a/htmlcss/2-css/index.html
+++ b/htmlcss/2-css/index.html
@@ -40,6 +40,49 @@
         <span>hjfkhdfkjhkjds</span>
     </section>
 
+    <section id="container">
+        <ul>
+            <li>Item 1
+                <ul>
+                    <li>item 1 - 1</li>
+                    <li>item 1 - 2</li>
+                    <li>item 1 - 3</li>
+                </ul>
+            </li>
+            <li>Item 2</li>
+            <li>Item 3</li>
+            <li>Item 4</li>
+        </ul>
+    </section>
+
+    <section id="child">
+        <p>Lorem ipsum dolor sit.</p>
+        <p>Lorem ipsum dolor sit.</p>
+        <p>Lorem ipsum dolor sit.</p>
+        <p>Lorem ipsum dolor sit.</p>
+        <p>Lorem ipsum dolor sit.</p>
+        <p>Lorem ipsum dolor sit.</p>
+        <p>Lorem ipsum dolor sit.</p>
+        <p>Lorem ipsum dolor sit.</p>
+        <p>Lorem ipsum dolor sit.</p>
+        <p>Lorem ipsum dolor sit.</p>
+        <p>Lorem ipsum dolor sit.</p>
+    </section>
+
+    <div id="block">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, deleniti.</p>
+        <a href="">click ici</a>
+    </div>
+
+    <nav id="navigation">
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">Contact</a></li>
+            <li><a href="">Mentions légales</a></li>
+        </ul>
+    </nav>
+
 
 </body>
 </html>
