--- a/htmlcss/3-css/index.html
+++ b/htmlcss/3-css/index.html
@@ -36,9 +36,13 @@
     <section id="blog">
         <div class="wrap">
             <div class="bigbox">
-                <div class="minibox minibox1"></div>
+                <div class="minibox minibox1">
+                    <div class="microbox1"></div>
+                </div>
                 <div class="minibox minibox2"></div>
-                <div class="minibox minibox3"></div>
+                <div class="minibox minibox3">
+                    <img src="https://picsum.photos/id/237/100/100" alt="">
+                </div>
                 <div class="clear"></div>
             </div>
         </div>
