--- a/htmlcss/6-innow/correction/index.html
+++ b/htmlcss/6-innow/correction/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>CSS - Innow</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="asset/css/style.css">
 </head>
 <body>
@@ -21,7 +24,7 @@
             <img src="asset/img/intro-listing-innow.png" alt="intro listing">
         </div>
         <div class="box box_text">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque beatae, blanditiis commodi delectus dolores fuga fugit impedit, in inventore mollitia non officia possimus quod. Cumque eos incidunt itaque iure minima omnis perferendis praesentium quo, repellendus sapiente temporibus velit. Ab accusamus aut autem beatae, ea excepturi facere hic illum inventore nobis obcaecati quidem quisquam sapiente vel vero? Aut eligendi id inventore laboriosam magni nam obcaecati pariatur perspiciatis quaerat quasi, quisquam repudiandae! A doloribus esse eum odio repellendus tempore, ut? Amet dolore ducimus neque, perferendis quidem rem tempora. Aspernatur blanditiis deserunt excepturi exercitationem inventore, magni maxime obcaecati praesentium provident quo quod ullam.</p>
+            <p>Dolores fuga fugit impedit, in inventore mollitia non officia possimus quod. Cumque eos incidunt itaque iure minima omnis perferendis praesentium quo, repellendus sapiente temporibus velit. Ab accusamus aut autem beatae, ea excepturi facere hic illum inventore nobis obcaecati quidem quisquam sapiente vel vero? Aut eligendi id inventore laboriosam magni nam obcaecati pariatur perspiciatis quaerat quasi, quisquam repudiandae! A doloribus esse eum odio repellendus tempore, ut? Amet dolore ducimus neque, perferendis quidem rem tempora. Aspernatur blanditiis deserunt excepturi exercitationem inventore, magni maxime obcaecati praesentium provident quo quod ullam.</p>
         </div>
     </div>
 </section>
