--- a/htmlcss/6-innow/correction/single.html
+++ b/htmlcss/6-innow/correction/single.html
@@ -1,1 +1,44 @@
-single.html
+<!doctype html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>CSS - Innow</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="asset/css/style.css">
+</head>
+<body>
+<header id="masthead">
+    <a href="index.html">
+        <div class="logo">
+            <img src="asset/img/logo_innow.png" alt="logo innowation">
+        </div>
+    </a>
+</header>
+<section class="orange_box"></section>
+<section id="info">
+    <div class="wrap">
+        <div>
+            <img src="asset/img/WTTJ.png" alt="">
+            <img src="asset/img/ellipse.png" alt="">
+            <h1>Michel Cléda</h1>
+            <p>Co founder</p>
+            <p>michel@michel.com</p>
+        </div>
+        <div>
+            <h2>initials</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ad error illo maxime, perspiciatis rerum tempore velit voluptates? Amet at doloremque enim, et illo laudantium porro possimus qui sunt tempore. Asperiores distinctio libero rem sint. Eveniet iste libero neque placeat quia repellendus similique, ut. Animi aut blanditiis eveniet labore officia quasi soluta? Amet inventore nihil quae quasi sit? Ad, animi aperiam asperiores culpa debitis deserunt doloremque dolorum ea enim iure molestiae nesciunt quae, quis, reprehenderit veritatis! Ab ad adipisci autem corporis distinctio earum ex harum itaque iusto laboriosam libero minus, numquam optio perspiciatis quae qui sunt tempore voluptatem voluptates voluptatum!</p>
+        </div>
+    </div>
+</section>
+<section id="video">
+    <div class="wrap2">
+        <img src="asset/img/image-video-2.jpg" alt="">
+        <div class="lecteur"></div>
+    </div>
+</section>
+</body>
+</html>
