--- a/htmlcss/6-innow/correction/index.html
+++ b/htmlcss/6-innow/correction/index.html
@@ -31,9 +31,9 @@
 <section id="partners">
     <div class="wrap">
         <div class="one_partener">
-            <div class="one_partener__img">
+            <div class="one_partener__img ">
                 <a href="single.html">
-                    <img src="asset/img/partner-img.jpg" alt="">
+                    <img class="shadow" src="asset/img/partner-img.jpg" alt="">
                     <div class="lecteur"></div>
                 </a>
             </div>
