--- a/htmlcss/6-innow/correction/single.html
+++ b/htmlcss/6-innow/correction/single.html
@@ -21,21 +21,21 @@
 <section class="orange_box"></section>
 <section id="info">
     <div class="wrap">
-        <div>
-            <img src="asset/img/WTTJ.png" alt="">
-            <img src="asset/img/ellipse.png" alt="">
+        <div class="info_left">
+            <img class="logo_entre" src="asset/img/WTTJ.png" alt="">
+            <img class="tete" src="asset/img/ellipse.png" alt="">
             <h1>Michel Cléda</h1>
             <p>Co founder</p>
             <p>michel@michel.com</p>
         </div>
-        <div>
+        <div class="info_right">
             <h2>initials</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ad error illo maxime, perspiciatis rerum tempore velit voluptates? Amet at doloremque enim, et illo laudantium porro possimus qui sunt tempore. Asperiores distinctio libero rem sint. Eveniet iste libero neque placeat quia repellendus similique, ut. Animi aut blanditiis eveniet labore officia quasi soluta? Amet inventore nihil quae quasi sit? Ad, animi aperiam asperiores culpa debitis deserunt doloremque dolorum ea enim iure molestiae nesciunt quae, quis, reprehenderit veritatis! Ab ad adipisci autem corporis distinctio earum ex harum itaque iusto laboriosam libero minus, numquam optio perspiciatis quae qui sunt tempore voluptatem voluptates voluptatum!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis dolorem dolores facilis harum laboriosam mollitia nihil nisi odit porro ut. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium ad error illo maxime, perspiciatis rerum tempore velit voluptates? Amet at doloremque enim, et illo laudantium porro possimus qui sunt tempore. Asperiores distinctio libero rem sint. Eveniet iste libero neque placeat quia repellendus similique, ut. Animi aut blanditiis eveniet labore officia quasi soluta? Amet inventore nihil quae quasi sit? Ad, animi aperiam asperiores culpa debitis deserunt doloremque dolorum ea enim iure molestiae nesciunt quae, quis, reprehenderit veritatis! Ab ad adipisci autem corporis distinctio earum ex harum itaque iusto laboriosam libero minus, numquam optio perspiciatis quae qui sunt tempore voluptatem voluptates voluptatum!</p>
         </div>
     </div>
 </section>
 <section id="video">
-    <div class="wrap2">
+    <div class="wrap2 shadow">
         <img src="asset/img/image-video-2.jpg" alt="">
         <div class="lecteur"></div>
     </div>
