--- a/htmlcss/7-sym/correction/index.html
+++ b/htmlcss/7-sym/correction/index.html
@@ -8,15 +8,23 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Quicksand:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="asset/css/style.css">
 </head>
 <body>
 <header id="masthead">
-    <ul>
-        <li><a href="#partenaire">partenaire</a></li>
-        <li><a href="#contact">contact</a></li>
-    </ul>
-
+    <div class="bigwrap">
+        <div>
+            <i class="fa-brands fa-symfony"></i> <span>Symfony</span>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#learn">Learn</a></li>
+                <li><a href="#partenaire">Partenaire</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
 </header>
 <section id="intro">Intro</section>
 <section id="component">component</section>
