--- a/htmlcss/7-sym/correction/index.html
+++ b/htmlcss/7-sym/correction/index.html
@@ -14,7 +14,7 @@
 <body>
 <header id="masthead">
     <div class="bigwrap">
-        <div>
+        <div class="logo">
             <i class="fa-brands fa-symfony"></i> <span>Symfony</span>
         </div>
         <nav>
