--- a/htmlcss/7-sym/correction/index.html
+++ b/htmlcss/7-sym/correction/index.html
@@ -26,7 +26,14 @@
         </nav>
     </div>
 </header>
-<section id="intro">Intro</section>
+<section id="intro">
+    <div>
+        <h1><strong>Symfony</strong> is a set of reusable PHP components...</h1>
+        <h2>... and a <strong>PHP framework</strong> for web projects</h2>
+        <p>The standard foundation on which the best PHP applications are built. Choose any of the 50 stand-alone components available for your own applications.</p>
+        <p>Speed up the creation and maintenance of your PHP web applications. End repetitive coding tasks and enjoy the power of controlling your code.</p>
+    </div>
+</section>
 <section id="component">component</section>
 <section id="learn">learn</section>
 <section id="partenaire">partenaire</section>
