--- a/htmlcss/7-sym/correction/index.html
+++ b/htmlcss/7-sym/correction/index.html
@@ -34,7 +34,10 @@
         <p>Speed up the creation and maintenance of your PHP web applications. End repetitive coding tasks and enjoy the power of controlling your code.</p>
     </div>
 </section>
-<section id="component">component</section>
+<section id="component">
+
+
+</section>
 <section id="learn">learn</section>
 <section id="partenaire">partenaire</section>
 <section id="testimonial">testimonial</section>
