--- a/htmlcss/7-sym/correction/index.html
+++ b/htmlcss/7-sym/correction/index.html
@@ -35,8 +35,36 @@
     </div>
 </section>
 <section id="component">
+    <div class="wrap">
+        <h2>Best components</h2>
+        <ul class="boxs">
+            <li class="shadow">
+                <img src="https://picsum.photos/id/39/400/300?grayscale" alt="">
+                <div class="bloc_text">
+                    <h3>HttpFoundation Component</h3>
+                    <div class="separator"></div>
+                    <p>The HttpFoundation component defines an object-oriented layer for the HTTP specification.</p>
+                </div>
+            </li>
+            <li class="shadow">
+                <img src="https://picsum.photos/id/1/400/300?grayscale" alt="">
+                <div class="bloc_text">
+                    <h3>HttpFoundation</h3>
+                    <div class="separator"></div>
+                    <p>The HttpFoundation layer for the HTTP specification.</p>
+                </div>
+            </li>
+            <li class="shadow">
+                <img src="https://picsum.photos/id/668/400/300?grayscale" alt="">
+                <div class="bloc_text">
+                    <h3>Component</h3>
+                    <div class="separator"></div>
+                    <p>The HttpFoundation The HttpFoundationThe HttpFoundation component defines an object-oriented layer for the HTTP specification.</p>
+                </div>
+            </li>
 
-
+        </ul>
+    </div>
 </section>
 <section id="learn">learn</section>
 <section id="partenaire">partenaire</section>
