--- a/htmlcss/7-sym/correction/index.html
+++ b/htmlcss/7-sym/correction/index.html
@@ -62,11 +62,23 @@
                     <p>The HttpFoundation The HttpFoundationThe HttpFoundation component defines an object-oriented layer for the HTTP specification.</p>
                 </div>
             </li>
-
         </ul>
     </div>
 </section>
-<section id="learn">learn</section>
+<section id="learn">
+    <div class="bigwrap">
+        <div class="learn_img">
+            <img src="https://picsum.photos/id/368/800/780?grayscale" alt="learn">
+        </div>
+        <div class="learn_text">
+            <h2>Learning Symfony</h2>
+            <p>Get trained with the creator of the Symfony framework.</p>
+            <img src="https://symfony.com/images/home/logo-sfuniversity.svg" alt="logo university symfony">
+            <p>Select a track for a guided path through our 95+ video tutorial courses</p>
+            <img src="https://symfony.com/images/home/logo-sfcast.svg" alt="logo-sfcast">
+        </div>
+    </div>
+</section>
 <section id="partenaire">partenaire</section>
 <section id="testimonial">testimonial</section>
 <section id="contact">contact</section>
