--- a/htmlcss/7-sym/correction/index.html
+++ b/htmlcss/7-sym/correction/index.html
@@ -79,7 +79,34 @@
         </div>
     </div>
 </section>
-<section id="partenaire">partenaire</section>
+<section id="partenaire">
+    <div class="wrap2">
+        <div class="all_partners">
+            <div class="shadow">
+                <img src="https://picsum.photos/id/38/250/150?grayscale" alt="">
+                <h2>Code</h2>
+                <i class="fa-sharp fa-solid fa-code"></i>
+            </div>
+            <div class="shadow">
+                <img src="https://picsum.photos/id/32/250/150?grayscale" alt="">
+                <h2>Brain</h2>
+                <i class="fas fa-brain"></i>
+            </div>
+            <div class="shadow">
+                <img src="https://picsum.photos/id/78/250/150?grayscale" alt="">
+                <h2>PHP</h2>
+                <i class="fab fa-php"></i>
+            </div>
+            <div class="shadow">
+                <img src="https://picsum.photos/id/348/250/150?grayscale" alt="">
+                <h2>Server</h2>
+                <i class="fas fa-server"></i>
+            </div>
+        </div>
+    </div>
+</section>
+
+
 <section id="testimonial">testimonial</section>
 <section id="contact">contact</section>
 <footer id="colophon"></footer>
