--- a/htmlcss/7-sym/correction/index.html
+++ b/htmlcss/7-sym/correction/index.html
@@ -105,9 +105,56 @@
         </div>
     </div>
 </section>
+<section id="testimonial">
+    <div class="wrap">
+        <h2>Les avis</h2>
+        <div class="avis_all">
+            <div class="shadow">
+                <div class="testi_text">
+                    <p>
+                        <i class="fa-sharp fa-solid fa-quote-left"></i>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum laborum nemo non obcaecati pariatur repellendus sequi tempora tempore vel voluptate?
+                        <i class="fa-sharp fa-solid fa-quote-right"></i>
+                    </p>
+                </div>
+                <div class="testi_user">
+                    <img src="https://picsum.photos/id/348/100/100?grayscale" alt="user 1">
+                    <p class="text_job">Dev Front</p>
+                    <p>Dany Denver</p>
+                </div>
+            </div>
+            <div class="shadow">
+                <div class="testi_text">
+                    <p>
+                        <i class="fa-sharp fa-solid fa-quote-left"></i>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum laborum nemo non obcaecati pariatur repellendus sequi tempora tempore vel voluptate?
+                        <i class="fa-sharp fa-solid fa-quote-right"></i>
+                    </p>
+                </div>
+                <div class="testi_user">
+                    <img src="https://picsum.photos/id/348/100/100?grayscale" alt="user 1">
+                    <p class="text_job">Dev Fullstack</p>
+                    <p>Dany Denver</p>
+                </div>
+            </div>
+            <div class="shadow">
+                <div class="testi_text">
+                    <p>
+                        <i class="fa-sharp fa-solid fa-quote-left"></i>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum laborum nemo non obcaecati pariatur repellendus sequi tempora tempore vel voluptate?
+                        <i class="fa-sharp fa-solid fa-quote-right"></i>
+                    </p>
+                </div>
+                <div class="testi_user">
+                    <img src="https://picsum.photos/id/338/100/100?grayscale" alt="user 1">
+                    <p class="text_job">Dev Back</p>
+                    <p>Dany Denver</p>
+                </div>
+            </div>
 
-
-<section id="testimonial">testimonial</section>
+        </div>
+    </div>
+</section>
 <section id="contact">contact</section>
 <footer id="colophon"></footer>
 </body>
