--- a/htmlcss/7-sym/correction/index.html
+++ b/htmlcss/7-sym/correction/index.html
@@ -155,7 +155,41 @@
         </div>
     </div>
 </section>
-<section id="contact">contact</section>
-<footer id="colophon"></footer>
+<section id="contact">
+    <div class="wrap3">
+        <h2>Contactez moi</h2>
+        <form action="">
+            <input type="text" placeholder="Votre nom">
+            <input type="email" placeholder="Votre E-mail">
+            <textarea placeholder="Votre message"></textarea>
+            <input type="submit" value="Envoyer">
+        </form>
+    </div>
+</section>
+<footer id="colophon">
+    <div class="bigwrap">
+        <div>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Download</a></li>
+                <li><a href="">Learning</a></li>
+                <li><a href="">Component</a></li>
+            </ul>
+        </div>
+        <div>
+            <p>
+                <i class="fa-brands fa-symfony"></i> &copy; Michel Compagny International
+            </p>
+        </div>
+        <div class="reseau">
+            <ul>
+                <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
+                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+            </ul>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
