--- a/js/js3-base/index.html
+++ b/js/js3-base/index.html
@@ -168,32 +168,132 @@
     console.log(d > f); // false
     console.log(d < f); // true
 
+    // Opérateurs logiques
+    // !, OR => || ,  AND => &&
+    console.log(var1 != var2 && var1 === var3); // true && true => true
+    console.log(var1 == var2 || var1 === var3); // false && true => true
+    console.log(true || false && true || false && false); // true
+    // opérateurs de concaténation => +
+    let lemonde = 'le monde';
+    console.log('Bonjour ' + lemonde + '!');
+    console.log("Bonjour " + lemonde + "!");
+    console.log(`Bonjour ${lemonde.toUpperCase()} !`);
+    const utilisateur = {
+        nom: 'Bertollucci',
+        prenom: 'Michel',
+        age: 34
+    };
+    console.log('Je suis ' + utilisateur['nom'] + ' '+ utilisateur.prenom +' et j\'ai '+ utilisateur.age +' ans.' );
+    console.log(`Je suis ${utilisateur.nom} ${utilisateur.prenom} et j'ai ${utilisateur.age} ans.`);
+    let html = '';
+    html += 'Je suis ';
+    html += utilisateur.nom;
+    html += ' ';
+    html += utilisateur.prenom
+    html += ' et j\'ai ';
+    html += utilisateur.age
+    html += ' ans.';
+    console.log(html); // Je suis Bertollucci Michel et j'ai 34 ans.
+
+    // PROBLEME Addition vs concaténation
+    console.log(12 + 25 + 'Volvo'); // 37Volvo
+    console.log('Volvo' + 12 + 25); // Volvo1225
+    console.log('Volvo' + (12 + 25)); // Volvo37
+
+    // Les Conversions
+    // Les conversions explicite
+    // String
+    console.log(String(null)); // "null"
+    console.log(String(undefined)); // "undefined"
+    console.log(String(true)); // "true"
+    // Boolean
+    console.log(Boolean( {} )); // true
+    console.log(Boolean( [] )); // true
+    console.log(Boolean( function() {} )); // true
+    console.log(Boolean('bernard')); // true
+    console.log(Boolean('')); // false
+    console.log(Boolean(22)); // true
+    console.log(Boolean(0)); // false
+    // NaN => not a number
+    console.log(Boolean(NaN)); // false
+    console.log(Boolean(null)); // false
+    console.log(Boolean(undefined)); // false
+    console.log(Boolean(false)); // false
+    console.log(Boolean(true)); // true
+    // Number
+    console.log(Number( null )); // 0
+    console.log(Number( undefined )); // NaN
+    console.log(Number( true )); // 1
+    console.log(Number( false )); // 0
+    console.log(Number( '2567' )); // 2567
+    console.log(Number( '-25.674654' )); // -25.674654
+    console.log(Number( '' )); // 0
+    console.log(Number( '55s' )); // NaN
+
+    // La conversion implicite ou automatique
+    console.log(2 == '3'); // false
+    console.log(2 == '2'); // true
+    console.log('a' + 15 + 15); // "a1515"
+    // comparaison d'égalité faible ( == )
+    console.log("1" == 1); // true
+    console.log("1" == true); // true
+    console.log(null == undefined); // true
+    console.log( 0 == false); // true
+    console.log(1 == [1]); // true
+    console.log(1 == [3]); // false
+    console.log('' == false); // true
+    console.log('' == 0); // true
+    console.log('2' == true); // false
+    console.log('bonjour' == true); // false
+    console.log(0 == null); // false
+    console.log(0 == undefined); // false
+    console.log(null == false); // false
+    console.log(undefined == false); // false
+    console.log('kjhkjhk' == NaN); // false
+    // la comparaison d'égalité stricte => ===
+    console.log(undefined === undefined); // true
+    console.log(null === null); // true
+    console.log('texte' === 'texte'); // true
+    console.log(0 === 0); // true
+    console.log(0 === false); // false
+    console.log('1' === 1); // false
+    console.log(NaN === NaN); // false
+
+    // les objects sont comparés par référence
+    console.log({ a: 1} === { a: 1}); // false
+    console.log([1,2,3] === [1,2,3]); // false
+
+    // verifier ordre alphabétique
+    console.log('a' > 'b');  // false
+    console.log('d' > 'c');  // true
+    console.log('da' > 'dg');  // false
+    console.log('dh' > 'dg');  // true
+
+    // !
+    console.log(!true); // false
+    console.log(!false); // true
+    console.log(!''); // true
+    console.log(!'hjgdffjdsgj'); // false
+    console.log(!42); // false
 
 
+    // RAPPEL
+    // Primitive
+    const aaa = 1;
+    let bbb = 1;
+    let ccc = bbb;
+    console.log(aaa === bbb); // true
+    console.log(ccc === bbb); // true
+    // Objects
+    const obj1 = { b: 3 };
+    const obj2 = obj1;
+    obj2.b = 45;
+    // les objects sont copiés par référence
+    console.log({obj1,obj2});
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    console.log(obj1 == obj2); // true
+    const obj3 = { b: 3};
+    console.log(obj1 == obj3); // false
 
 </script>
 
