--- a/js/js9-dom/index.html
+++ b/js/js9-dom/index.html
@@ -19,13 +19,16 @@
         <li>Litchi</li>
         <li>Papaye</li>
     </ul>
-    <section>
+    <section id="blog">
         <h3 class="megatitle">Titre 1</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisiciit.</p>
         <h3 class="megatitle">Titre 2</h3>
         <p>Lorem ipsum dolor sit a</p>
         <h3 class="megatitle">Titre 3</h3>
         <p>Lorem ipsum dolor sit a</p>
+
+        <img class="img_test" src="https://picsum.photos/id/2/200/300" alt="">
+        <img class="img_test" src="https://picsum.photos/id/4/200/300" alt="">
     </section>
 
 <script src="asset/js/main.js"></script>
