--- a/js/js10-dom/index.html
+++ b/js/js10-dom/index.html
@@ -13,10 +13,15 @@
         <img src="https://picsum.photos/id/2/200/300" alt="hello">
         <p class="para">
             Je suis un paragraphe
-            <a href="#">Voir plus</a>
+            <a class="" href="#">Voir plus</a>
         </p>
         <input type="text">
     </section>
+
+<!-- Dataset -->
+    <div id="infos" data-id="4252" data-id-category="Livre" data-prenom="Antoine">
+        ici les infos
+    </div>
 
 </div>
 
