--- a/js/js12-event/index.html
+++ b/js/js12-event/index.html
@@ -21,6 +21,14 @@
     <div id="infos">
         <p>Ici les informations</p>
     </div>
+    <div id="infos2">
+        <p data-color="yellow">Article 1</p>
+        <p data-color="purple">Article 2</p>
+        <p>Article 3</p>
+        <p data-color="orange">Article 4</p>
+    </div>
+
+    <div id="boite"></div>
 
 </div>
 
