--- a/js/js12-event/index.html
+++ b/js/js12-event/index.html
@@ -30,6 +30,14 @@
 
     <div id="boite"></div>
 
+    <div id="box1">
+        <div id="box2">
+            <div id="box3">
+
+            </div>
+        </div>
+    </div>
+
 </div>
 
 
