--- a/js/js12-event/index.html
+++ b/js/js12-event/index.html
@@ -38,6 +38,16 @@
         </div>
     </div>
 
+
+    <section id="prevent">
+        <a href="https://weblitzer.fr">Link click ici</a>
+        <form id="formulaire" action="" method="post">
+            <input type="text" id="produit">
+            <input type="submit">
+        </form>
+        <ul></ul>
+    </section>
+
 </div>
 
 
