--- a/js/js13-counter/index.html
+++ b/js/js13-counter/index.html
@@ -15,6 +15,20 @@
         <input type="text" name="nom" id="nom" value="">
         <span class="error" id="error_nom"></span>
 
+        <label for="prenom">Prenom * (min 5 & max 50)</label>
+        <input type="text" name="prenom" id="prenom" value="">
+        <span class="error" id="error_prenom"></span>
+
+        <label for="fruits">Fruits</label>
+        <select name="fruits" id="fruits">
+            <option value="banane" data-color="yellow">Banane</option>
+            <option value="kiwi" data-color="green">Kiwi</option>
+            <option value="papaye" data-color="orange">Papaye</option>
+            <option value="fraise" data-color="red">Fraise</option>
+            <option value="litchi" data-color="white">Litchi</option>
+        </select>
+
+
         <input type="submit" name="submitted" value="GO">
     </form>
 
