--- a/js/js14-chrono/index.html
+++ b/js/js14-chrono/index.html
@@ -11,6 +11,14 @@
 
 <a href="" id="stop">Stop</a>
 
+<section>
+    <h2>Chronomètre</h2>
+    <button id="btn_start">Start</button>
+    <button id="btn_stop" class="hidden">Stop</button>
+    <button id="btn_reset" class="hidden">Reset</button>
+    <p id="counter">0</p>
+</section>
+
 <script src="asset/js/main.js"></script>
 </body>
 </html>
