--- a/js/js17-exo-html/index.html
+++ b/js/js17-exo-html/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>JS 17 - Exo html</title>
+    <link rel="stylesheet" href="asset/flexslider/flexslider.css">
     <link rel="stylesheet" href="asset/css/style.css">
 </head>
 <body>
@@ -38,6 +39,27 @@
     </div>
 </header>
 
+<section>
+    <div class="wrap">
+        <div class="flexslider" id="diaporama">
+            <ul class="slides">
+                <li>
+                    <img src="https://picsum.photos/id/237/1000/500" />
+                </li>
+                <li>
+                    <img src="https://picsum.photos/id/12/1000/500" />
+                </li>
+                <li>
+                    <img src="https://picsum.photos/id/536/1000/500" />
+                </li>
+            </ul>
+        </div>
+    </div>
+</section>
+
+
+<script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script><script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+<script src="asset/flexslider/jquery.flexslider-min.js"></script>
 
 <script src="asset/js/main.js"></script>
 </body>
