--- a/js/js17-exo-html/index.html
+++ b/js/js17-exo-html/index.html
@@ -38,7 +38,21 @@
         </ul>
     </div>
 </header>
+<div class="wrap">
+    <section id="dropdown">
+<!--        <a class="btn_dropdown" href="">Ouvrir</a>-->
+<!--        <ul class="opened">-->
+<!--            <li><a href="">texte 1</a></li>-->
+<!--            <li><a href="">texte 2</a></li>-->
+<!--            <li><a href="">texte 3</a></li>-->
+<!--        </ul>-->
+    </section>
 
+    <section id="reponse">
+        <img src="" alt="">
+        <p></p>
+    </section>
+</div>
 <section>
     <div class="wrap">
         <div class="flexslider" id="diaporama">
@@ -56,6 +70,9 @@
         </div>
     </div>
 </section>
+
+
+
 
 
 <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script><script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
